# clocktower-rs

./: Cargo.toml  LICENSE  README.md  TODO.md  diesel.toml
clocktower-cli/: Cargo.toml
clocktower-cli/src/: main.rs
clocktower-core/: Cargo.toml
clocktower-core/src/: lib.rs  models.rs  schema.rs
migrations/2024-03-05-115431_create_worktime_entry/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
