[package]
name = "clocktower-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3.0"
chrono = "0.4.34"
chrono-tz = "0.9.0"
ratatui = "0.26.1"
crossterm = "0.27.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
chrono-english = { git="https://github.com/stevedonovan/chrono-english.git", rev="8e07035"}

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


