[package]
name = "clocktower-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clocktower-core = { path = "../clocktower-core" }
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
chrono-english = { git="https://github.com/stevedonovan/chrono-english.git", rev="8e07035"}
ratatui = "0.26.1"
crossterm = "0.27.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
chrono = "0.4.34"
chrono-tz = "0.9.0"
