[package]
name = "clocktower-core"
version = "0.2.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3.0"
chrono = "0.4.34"
chrono-tz = "0.9.0"
tabled = "0.15.0"
